tests/conformance/valid/unicode_identifiers.ecl
// SPDX-License-Identifier: MPL-2.0

// Test: Unicode in identifiers
fn main() {
    let π = 3.14159;
    let τ = π * 2.0;
    assert(τ > 6.0);
}
