tests/conformance/invalid/division_by_zero.ecl
// SPDX-License-Identifier: MPL-2.0

// Test: Division by zero
fn main() {
    let x = 10 / 0;  // Should fail at runtime
}
